--- a/BallotQuestions.Rmd
+++ b/BallotQuestions.Rmd
@@ -20,29 +20,41 @@ The following imports all the campaign finance data from the ballot question.
 ```{r include = FALSE} 
 setwd('~/Desktop/PID/Campaign_Finance_Data')
 
-#Q1 Oppose
+#Q2022
 OpposeTaxHike <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question1/Coalition_to_Stop_the_Tax_Hike_Amendment.xlsx")
 
-#Q1 Support
 CoalitionforSocialJusticeFairShare <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question1/CoalitionforSocialJusticeFairShare.xlsx")
 
 Fair_Share_Massachusetts <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question1/Fair_Share_Massachusetts.xlsx") 
 
-#Q2 Oppose
+
 `Committee For Competitive Dental Plans for Consumers` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question2/Committee For Competitive Dental Plans for Consumers.xlsx")
 `Committee to Protect Access to Quality Dental Care` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question2/Committee_to_Protect_Access_to_Quality_Dental_Care.xlsx")
 
-#Q2 Support
 `Massachusetts Dental Care Providers for Better Dental Benefits` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question2/Massachusetts Dental Care Providers for Better Dental Benefits.xlsx")
 `Committee on Dental Insurance Quality` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question2/Committee on Dental Insurance Quality.xlsx")
 
-#Q3 
 `21st_Century_Alcohol_Retail_Reform_Committee` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question3/21st_Century_Alcohol_Retail_Reform_Committee.xlsx")
 
-#Q4
 `Fair_And_Secure_Massachusetts` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question4/Fair_And_Secure_Massachusetts.xlsx")
 
+#Q2020
 `Vote_YES_for_Work_and_Family_Mobility` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2022Data/Question4/Vote_YES_for_Work_and_Family_Mobility.xlsx")
+
+`Coalition_for_Safe_and_Secure_Data` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2020Data/Question1/Coalition_for_Safe_and_Secure_Data.xlsx")
+
+`Massachusetts_Right_to_Repair_Committee` <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2020Data/Question1/Massachusetts_Right_to_Repair_Committee.xlsx")
+
+No_Ranked_Choice_Voting_Committee_2020 <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2020Data/Question2/No_Ranked_Choice_Voting_Committee 2020.xlsx")
+
+Ranked_Choice_Voting_2020_Committee <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2020Data/Question2/Ranked_Choice_Voting_2020_Committee.xlsx")
+
+#Q2018 
+Coalition_to_Protect_Patient_Safety <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2018Data/Question1/Coalition_to_Protect_Patient_Safety.xlsx")
+
+Committee_to_Ensure_Safe_Patient_Care <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2018Data/Question1/Committee_to_Ensure_Safe_Patient_Care.xlsx")
+
+People_Govern_Not_Money <- read_xlsx("~/Desktop/PID/Campaign_Finance_Data/BallotQuestions2018Data/Question2/People_Govern_Not_Money.xlsx")
 ```
 
 ##CREATING LIST
